--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: windows-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
 
       # INstall Node on the runner
       - name: Install Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
+        uses: actions/setup-node@v3
+        #with:
+        #  node-version: "12.x"
 
 
       # Install the newman command line utility and also install the html extra reporter
@@ -33,7 +33,7 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run RegresAPI.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+          newman run RegresAPI.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
 
 
       # Upload the contents of Test Results directory to workspace
