--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       # INstall Node on the runner
       - name: Install Node
         uses: actions/setup-node@v3
-        #with:
-        #  node-version: "12.x"
+        with:
+          node-version: "14.x"
 
 
       # Install the newman command line utility and also install the html extra reporter
@@ -33,7 +33,8 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run RegresAPI.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
+          newman run RegresAPI.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+
 
 
       # Upload the contents of Test Results directory to workspace
