--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,7 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run RegresAPI.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
-
+          newman run RegresAPI.postman_collection.json -x -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html
 
 
       # Upload the contents of Test Results directory to workspace
