--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -29,7 +29,7 @@ jobs:
         uses: matt-ball/newman-action@master
         with:
           collection: RegresAPI.postman_collection.json
-          reporters: '["htmlextra"]'
+          reporters: '["newman-reporter-htmlextra"]'
             
       # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
