--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -23,13 +23,17 @@ jobs:
       # Make directory to upload the test results
       - name: Make Directory for results
         run: mkdir -p testResults
+
+      # Install Newman reporter htmlextra
+      - name: Install newman html Reporter
+        run: npm install -g newman-reporter-htmlextra
         
       # Run Postman with Newman
       - name: Run Newman and Postman tests
         uses: matt-ball/newman-action@master
         with:
           collection: RegresAPI.postman_collection.json
-          reporters: '["cli"]'
+          reporters: '["htmlextra"]'
             
       # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
