--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -20,24 +20,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Make directory to upload the test results
-      - name: Make Directory for results
-        run: mkdir -p testResults
-
-      # Install Newman reporter htmlextra
-      - name: Install newman html Reporter
-        run: npm install -g newman-reporter-htmlextra
-        
       # Run Postman with Newman
       - name: Run Newman and Postman tests
         uses: matt-ball/newman-action@master
         with:
           collection: RegresAPI.postman_collection.json
-          reporters: '["newman-reporter-htmlextra"]'
+          reporters: '["cli"]'
             
-      # Upload the contents of Test Results directory to workspace
-      - name: Output the run Details
-        uses: actions/upload-artifact@v3
-        with:
-          name: RunReports
-          path: testResults
+
